# r-tcp

./: .env-example  .gitignore  Cargo.toml  README.md  makefile
examples/: chat.rs  nc.rs  simple_client.rs  string_echo.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/client/: mod.rs
src/handler/: connection.rs  mod.rs  proc_connection.rs
src/protocol/: handler.rs  message.rs  mod.rs
src/server/: mod.rs  raw_server.rs  std_server.rs
src/storage/: mod.rs
src/utils/: mod.rs  monit.rs  optimizations.rs  socket.rs
